--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,3 +1,9 @@
 footer{
+    background-color: black; 
+    color: white;
 
+    position:relative;
+    bottom: 0;
+    width: 100%;
+    height: 650px;
 }
