--- a/styles/header.css
+++ b/styles/header.css
@@ -7,7 +7,7 @@ header {
 nav {
     display: flex;
     align-items: center;
-    padding: 10px 3%;
+    padding: 10px 5%;
     justify-content: center;
 
 
@@ -30,8 +30,9 @@ nav .search{
 
 }
 
-nav .logo{
-    text-align: center;
+nav .logo img{
+    height: 70px;
+    width: 70px;
     flex-grow: 1;
 
 }
