--- a/styles/header.css
+++ b/styles/header.css
@@ -7,39 +7,80 @@ header {
 nav {
     display: flex;
     align-items: center;
-    padding: 10px 5%;
+    padding: 10px 2%;
     justify-content: center;
 
 
 }
 
+nav .explore {
+    flex-basis: 110px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+
+.explore button {
+
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+    color: white;
+    font-weight: 700;
+    font-size: large;
+    width: 100%;
+
+} 
+
 nav ul li {
 
     display: inline-block;
     list-style: none;
-    font-weight: 600;
+    font-weight: 800;
     margin : 10px 20px;
 
 }
 
 nav .search{
 
+    flex-basis: 200px;
+    margin-left: 30px;
+}
 
-    flex-basis: 400px;
-    width: 50px;
+nav .search .material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 50,
+  'GRAD' -25,
+  'opsz' 10;
+
+  color: white;
 
 }
 
-nav .logo img{
-    height: 70px;
-    width: 70px;
+nav .logo{
+
     flex-grow: 1;
 
+}
+nav .logo img{
+    height: 60px;
+    width: 60px;
+    margin-left: 50%;
 }
 
 nav input{
 
     justify-items: center;
-    width: 200px;
+    color: white;
+    width: 100%;
+    height: 30px;
+    background-color: transparent;
+    border: 1px solid white;
 
 }
