--- a/styles/footer.css
+++ b/styles/footer.css
@@ -6,4 +6,91 @@ footer{
     bottom: 0;
     width: 100%;
     height: 650px;
+
+    display: flex;
+    flex-direction: column;
 }
+
+.Logo{
+    flex:2 ;
+    background-color: black;
+}
+
+.logo-nasa{
+    width: 64px;
+    padding-top: 60px;
+    padding-left: 23px;
+}
+
+.Info{
+    flex: 5;
+
+    display: flex;
+    flex-direction: row;
+}
+
+.About-Nasa{
+    background-color: pink;
+    flex: 3.25;
+    padding-left: 20px;
+    padding-top: 20px;
+    line-height: 20px;
+}
+
+.company-name{
+    line-height: 24px;
+}
+
+.about-company{
+    font-size: 15px;
+    padding-right: 10px;
+}
+
+.mission{
+    font-size: 15px;
+}
+.mission:hover{
+    cursor: pointer;
+    text-decoration: underline dashed;
+}
+
+.join-us{
+    display: flex;
+    flex-direction: row;
+   align-items: center;
+}
+.join{
+    font-weight: 720;
+    font-size: 17px;
+    padding-right: 10px;
+}
+.arrow{
+    border: none;
+    width: 20px;            
+    height: 20px;             
+    border-radius: 100%;       
+    border: none;              
+    background-color: #f64137; 
+    color: white;             
+    font-size: 12px;          
+    cursor: pointer;       
+}
+
+.arrow:hover{
+    background-color: #d3362d;
+}
+
+.Choice{
+    background-color: aliceblue;
+    flex: 5;
+}
+
+.Sosmed{
+    background-color: beige;
+    flex: 2;
+}
+
+.Bottom{
+    flex: 4;
+}
+
