--- a/styles/footer.css
+++ b/styles/footer.css
@@ -30,7 +30,7 @@ footer{
 }
 
 .About-Nasa{
-    background-color: pink;
+    background-color: rgb(0, 0, 0);
     flex: 3.25;
     padding-left: 20px;
     padding-top: 20px;
@@ -81,8 +81,36 @@ footer{
 }
 
 .Choice{
-    background-color: aliceblue;
+    background-color: rgb(0, 0, 0);
     flex: 5;
+    display: flex;
+    flex-direction: row;
+    font-size: 15px;
+    justify-content: center;
+    padding-top: 12px;
+    padding-left: 20px;
+}
+
+.Row{
+    padding-right: 50px;
+}
+
+.Row-content:hover{
+    cursor: pointer;
+    text-decoration: underline dashed;
+}
+
+.Logo-live{
+    border-color:#f64137;
+    padding: 2%;
+    border-width: 1px;
+    border-style: solid;
+    font-size: 8px;
+}
+
+.Logo-live:hover{
+    text-decoration: none;
+    background-color: #d3362d;
 }
 
 .Sosmed{
