--- a/styles/header.css
+++ b/styles/header.css
@@ -61,18 +61,33 @@ nav button {
     width: auto ;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     position: absolute;
-    padding: 5px 20px;
+    padding: 1rem;
     z-index: 1;
     text-decoration: none;
+    list-style: none;
 }
 
 .dropdown-content .arrow{
 
     margin-left: 10px;
 }
+
+.dropdown-content a{
+    text-decoration: none;
+    color: white;
+    font-weight: 300;
+}
+
+.dropdown-content a:hover{
+    text-decoration: underline;
+    text-decoration-style: dashed;
+
+}
 .show{
     display: flex;
+    flex-direction: column;
 }
+
 
 .dropdown-content .dropdown-menu-explore{
     margin-right: 50px;
