--- a/styles/footer.css
+++ b/styles/footer.css
@@ -12,7 +12,7 @@ footer{
 }
 
 .Logo{
-    flex:2 ;
+  
     background-color: black;
 }
 
@@ -23,15 +23,14 @@ footer{
 }
 
 .Info{
-    flex: 5;
-
     display: flex;
     flex-direction: row;
+    margin-bottom: 18px;
 }
 
 .About-Nasa{
     background-color: rgb(0, 0, 0);
-    flex: 3.25;
+    flex: 3.10;
     padding-left: 20px;
     padding-top: 20px;
     line-height: 20px;
@@ -42,8 +41,9 @@ footer{
 }
 
 .about-company{
-    font-size: 15px;
+    font-size: 14px;
     padding-right: 10px;
+    color: rgb(201, 201, 201);
 }
 
 .mission{
@@ -57,7 +57,7 @@ footer{
 .join-us{
     display: flex;
     flex-direction: row;
-   align-items: center;
+    align-items: center;
 }
 .join{
     font-weight: 720;
@@ -114,11 +114,84 @@ footer{
 }
 
 .Sosmed{
-    background-color: beige;
-    flex: 2;
+    padding-top: 30px;
+}
+.Follow{
+    color: rgb(160, 160, 160);
+    font-weight: bold;
+    margin-bottom: 15px;
 }
 
+.More, .Newsletter{
+    font-size: 15px;
+    line-height: 35px;
+    margin-top: 5px;
+    cursor: pointer;
+}
+
+.More:hover, .Newsletter:hover{
+    cursor: pointer;
+    text-decoration: underline dashed;
+}
+
+.Logo-Socmed{
+    font-size: 18px;
+    color: rgb(232, 232, 232);
+    margin-bottom: 17px;
+}
+
+.fa-facebook-f, .fa-instagram, .fa-youtube, .fa-x-twitter {
+    padding: 9px;
+    font-size: 13px;
+    width: 13px;
+    text-decoration: none;
+    text-align: center;
+    background-color: rgb(67, 67, 67);
+    border-radius: 50%;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.fa-facebook-f:hover, .fa-instagram:hover, .fa-youtube:hover, .fa-x-twitter:hover{
+    background-color: rgb(138, 138, 138);
+}
+
+
 .Bottom{
-    flex: 4;
+    flex: auto;
+    border-top-color: rgb(126, 126, 126);
+    border-top-width: 1px;
+    border-top-style: solid;
+
+    margin-left: 20px;
+    margin-right: 20px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.Bottom2{
+    display: flex;
+    font-size: 15px;
+    color: rgb(220, 220, 220);
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 38px;
+    margin-bottom: 38px;
+}
+
+
+
+.Bottom3{
+    display: flex;
+    font-size: 15px;
+    color: rgb(152, 152, 152);
+    justify-content: space-between;
+    align-items: center;
+    width: 1000px;
+}
+
+.bold{
+    font-weight: bolder;
 }
 
