--- a/styles/header.css
+++ b/styles/header.css
@@ -2,6 +2,14 @@ header {
     width: 100%;
     color: white;
     background-color : black;
+    box-sizing: border-box;
+}
+
+.heading-12{
+    font-size: 12px;
+}
+.heading-16{
+    font-size: 16px;
 }
 
 nav {
@@ -15,7 +23,8 @@ nav {
 
 
 
-ul, li {
+ul, li, a{
+    text-decoration: none;
     list-style: none;
     margin: 0;
     padding:0;
@@ -161,12 +170,7 @@ nav button {
 .dropdown-img-explore .article-type-date .heading-12{
     color: gray;
 }
-.heading-12{
-    font-size: 12px;
-}
-.heading-16{
-    font-size: 16px;
-}
+
 .dropdown-menu-explore a{
 
     color: white   ;
