--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,7 @@
     width: 100%;
     max-width: 100%;
     background-image: url("https://www.nasa.gov/wp-content/uploads/2024/09/earth-moon.gif?w=353");
+    background-repeat: no-repeat;
     background-size:cover;
     background-position: center;
     color: white;
@@ -108,4 +109,26 @@
     position: absolute;
     right: 2rem;
     bottom: 2.5rem;
+}
+
+.play-button{
+    display: flex;
+}
+
+.play-button button:hover{
+    cursor: pointer;
+}
+.play-button .progress{
+
+    margin-right: 20px;
+    border: 5px solid white;
+    background-color: black;
+    border-radius: 50%;
+    padding: .75rem 1rem;
+}
+.play-button .pause-play{
+    border: 0px solid white;
+    background-color: gray;
+    border-radius: 50%;
+    padding: 1rem 1.25rem;
 }
